# yahoo-finance-server

./: README.md  pyproject.toml
src/yahoo_finance_server/: helper.py  server.py
