[project]
name = "trading-bot-yahoo-finance-server"
version = "1.0.0"
description = "Enhanced Yahoo Finance server for F.A.S.T. Trading Bot - comprehensive stock market data with Indian market optimizations."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["yahoo-finance", "stocks", "market-data", "mcp", "ai", "trading", "finance", "nse", "indian-markets", "trading-bot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.9.3",
    "yfinance==0.2.62",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[[project.authors]]
name = "Himanshu Gupta (BotFather)"
email = "himanshux@trading-bot.dev"

[project.urls]
Homepage = "https://github.com/p1c4ss0/trading-bot-yahoo-finance-server"
Repository = "https://github.com/p1c4ss0/trading-bot-yahoo-finance-server"
Documentation = "https://github.com/p1c4ss0/trading-bot-yahoo-finance-server#readme"
Issues = "https://github.com/p1c4ss0/trading-bot-yahoo-finance-server/issues"
Upstream = "https://github.com/AgentX-ai/yahoo-finance-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
trading-bot-yahoo-finance-server = "yahoo_finance_server:main"
yahoo-finance-server = "yahoo_finance_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yahoo_finance_server"]

[tool.uvx]
namespace = "agentx" 